Added mock API calls